# pydegensac

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
.github/workflows/: build_wheels.yml
docker/: README.txt  how-to-create-wheel.txt
docker/manylinux1/: Dockerfile
docker/manylinux2014/: Dockerfile
docs/: Doxyfile  Makefile  conf.py  cpp_code.rst  index.rst  make.bat  python_code.rst
examples/: simple-example-colors.ipynb  simple-example.ipynb  simple-example.py
examples/img/v_dogman/: 1.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  H_1_2  H_1_3  H_1_4  H_1_5  H_1_6
lib/pybind11/include/pybind11/: class_support.h  pybind11.h
src/pydegensac/: __init__.py  bindings.cpp  utils.py
src/pydegensac/degensac/: DegUtils.c  DegUtils.h  Fcustomdef.h  Ftools.c  Ftools.h  Htools.c  Htools.h  Makefile  exp_ranF.c  exp_ranF.h  exp_ranH.c  exp_ranH.h  hash.c  hash.h  lapwrap.c  lapwrap.h  ranF.c  ranF.h  ranH.c  ranH.h  ranH2el.c  ranH2el.h  rtools.c  rtools.h  utools.c  utools.h
src/pydegensac/matutls/: CMakeLists.txt  Makefile  atou1.c  atovm.c  ccmath.h  chouse.c  chousv.c  cmattr.c  cmcpy.c  cminv.c  cmmul.c  cmmult.c  cmprt.c  complex.h  csolv.c  cvmul.c  eigen.c  eigval.c  evmax.c  hconj.c  heigval.c  heigvec.c  hevmax.c  hmgen.c  house.c  housev.c  ldumat.c  ldvmat.c  lsqsv.c  matconsts.c  matprt.c  mattr.c  matutl.h  mcopy.c  minv.c  mmul.c  ortho.c  otrma.c  otrsm.c  psinv.c  (+27 more)
src/pydegensac/matutls/matutls/: matutls.dsp  matutls.vcproj
